text-align css fix

--- a/src/styles/less/ngToast.less
+++ b/src/styles/less/ngToast.less
@@ -56,10 +56,6 @@
       right: 0;
       margin-right: @ngt-spacing;
     }
-
-    .@{ngt-module}__message {
-      text-align: right;
-    }
   }
 
   &.@{ngt-module}--left {
@@ -68,10 +64,6 @@
       right: auto;
       left: 0;
       margin-left: @ngt-spacing;
-    }
-
-    .@{ngt-module}__message {
-      text-align: left;
     }
   }
 
